# IC

./: .gitignore  README.md
proj1/: .gitignore
proj1/sndfile-example-bin/: decoder  encoder  test_BitStream  wav_cmp  wav_cmp_extra  wav_cp  wav_dct  wav_dct_original  wav_effects  wav_hist  wav_quant
proj2/: main.cpp
project02/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  data  extract_channel.cpp  golomb  main.cpp  rotate.cpp
project02/opencv-bin/: ex1  ex2
project02/opencv-src/: CMakeLists.txt  README.md  ex1.cpp  ex2.cpp  golomb.hh
project02/opencv-src/imagens_PPM/: belingol.ppm
project02/opencv-src/newImages/: new_image1.ppm  new_image2.ppm
project02/src/: extract_channel.cpp  light.cpp  losslessWavDecode.cpp  losslessWavEncode.cpp  mirror.cpp  negative.cpp  rotate.cpp  test_Golomb.cpp  wavDecode.cpp  wavEncode.cpp
project02/src/imagiges/: baboon0.ppm
project02/src/include/: BitStream.cpp  Golomb.cpp  Golomb.hh
project02/src/plots/: bitrate.py
project03/: .gitignore  CMakeLists.txt  compressed
project03/src/: image.cpp  image_decode.cpp  image_encode.cpp  ppm_code.cpp  ppm_decode.cpp  video_cmp.cpp  video_cmp_decode.cpp  y4m_intra_code.cpp  y4m_intra_decode.cpp
project03/src/include/: BitStream.cpp  BitStream.hh  Golomb.hh
sndfile-example-src/: .~lock.channel0.txt#  .~lock.side.txt#  BitStream.hh  CMakeLists.txt  README.md  Wav_quant.hh  bitstream.cpp  bitstream.h  channel0.txt  channel1.txt  compact.txt  decoder.cpp  encoder.cpp  outch0.data  outch1.data  outdiff.data  outmono.data  test_BitStream.cpp  wav_cmp.cpp  wav_cmp2.cpp  wav_dct.cpp  wav_dct2.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp
sndfile-example-src/plots/ex1/: plots.py
sndfile-example-src/wavs/: sample01.dct  sample01.out
